<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_memo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arm2.nhatki2.EditMemoActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/lnTopEditMemo"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/iconmood"
            android:id="@+id/imageView15"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtTitleEditMemo"
            android:layout_weight="9"
            android:text="@string/edit_moods"
            android:textColor="@color/text_color"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lnTopEditMemo"
        android:background="@drawable/thanhgachngang"
        android:id="@+id/lnGachNgangEditMemo">
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lnGachNgangEditMemo"
        android:background="@drawable/khungtieudetentrangthai"
        android:layout_centerInParent="true"
        android:id="@+id/lnEditTitleMemoEditMemo">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_below="@+id/lnGachNgangEditMemo"
            android:ems="10"
            android:id="@+id/EdTenMemoEditMemo"
            android:hint="@string/nhap_ten_memo"
            android:textColor="@color/text_color"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_below="@+id/lnEditTitleMemoEditMemo"
        android:id="@+id/lnChooseMemoEditMemo"
        android:layout_above="@+id/lnButtonEditMemo"
        android:layout_height="wrap_content"
        android:paddingTop="100dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/iconchoosemood"
            android:id="@+id/lnChooseImgMemoEditMemo">

            <TextView
                android:text="@string/choose_icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:layout_weight="9"
                android:paddingLeft="10dp"
                android:textColor="@color/text_color"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/iconmood"
                android:id="@+id/imgChooseImgMemoEditMemo"
                android:layout_weight="1"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lnButtonEditMemo"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnSaveEditMemo"
                android:layout_weight="1"
                android:background="@drawable/buttonsave"
                android:textColor="@color/text_color"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
